phone link added

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                    placeholder="Search" aria-label="Search"
                    aria-describedby="basic-addon2">
                    <div class="input-group-append">
-                       <span class="input-group-text text-primary bg-white"
-                       id="search-button">Search</span>
+                       <span onclick="allPhones()" class="input-group-text text-primary bg-white"
+                       id="search-btn">Search</span>
                    </div>
                </div>
             </div>
