phone details added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       <div class="row w-100 m-auto">
            <div class="col-md-6">
                <!-- Search-box -->
-               <h1>Left side</h1>
                <div class="input-group mb-3">
                    <input id="search-box" type="text" class="from-control"
                    placeholder="Search" aria-label="Search"
@@ -27,9 +26,11 @@
                        id="search-btn">Search</span>
                    </div>
                </div>
+               <div id="phone-container" class="phone-container">
+                 
+               </div>
             </div>
            <div class="col-md-6">
-               <h1>Right side</h1>
             </div>
       </div>
 </div>
