--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                </div>
             </div>
            <div class="col-md-6">
+               <div id="details-container" class="details-container">
+
+               </div>
             </div>
       </div>
 </div>
