--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
            <div class="col-md-6">
                <!-- Search-box -->
                <div class="input-group mb-3">
-                   <input id="search-box" type="text" class="from-control"
-                   placeholder="Search" aria-label="Search"
+                   <input id="search-box" type="text" class="from-control w-75"
+                   placeholder="Search your Phone" aria-label="Search"
                    aria-describedby="basic-addon2">
                    <div class="input-group-append">
-                       <span onclick="allPhones()" class="input-group-text text-primary bg-white"
+                       <span onclick="allPhones()" class="input-group-text text-white bg-primary"
                        id="search-btn">Search</span>
                    </div>
                </div>
+               <img id="spinner" src="./spinner1.gif" alt="">
                <div id="phone-container" class="phone-container">
                  
                </div>
